yaml/ejemplos_proyecto/service.yaml

kind: Service
apiVersion: v1

metadata:
    name: nginx-srv 

spec:
    type: ClusterIP
    ports:
        -   port: 8888          # Puerto del servicio
            targetPort: 80      # Puerto en el contenedor
    
    selector:
        app: nginx
        # Todos los pods con la etiqueta app: nginx se asignarán como backend: FALSO
        # los que estén en estado READY
